this is a commint yay

--- a/templates/home.html
+++ b/templates/home.html
@@ -48,24 +48,11 @@
     </style>
 </head>
 <body>
-    <h1 class="title">Mindscapes</h1>
 
-    <h3>This is a fun learning app where you complete tasks to earn Nerves.</h3>
-    <h3>Nerves can be used in the Text-based game to power up yourself.</h3>
-    
-   
-    
+    <h1 class="title">Mindscape</h1>
+    <p>Welcome To Minddscapes!</p>
+    <a href="{{ url_for('register') }}"><button>Register</button></a>
+    <a href="{{ url_for('login') }}"><button>Login</button></a>
 
-    
-
-    <br>
-
-
-
-  
-
-  
-    <a href="{{ url_for('teacher') }}"><button>Teacher</button></a>
-    <a href="{{ url_for('index') }}"><button>Student</button></a>
 </body>
 </html>
